[metadata]
name = treepy
version = attr: treepy.VERSION
description = Python Pretty Printer of Tree Data Structure
long_description = file: README.md
keywords = tree, data structure, pretty print
license = MIT License
classifiers = Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
